testdata/e2e/examples/update-crd/crd.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  annotations:
    controller-gen.kubebuilder.io/version: v0.14.0
  name: issues.example.example.com
spec:
  group: example.example.com
  names:
    kind: Issue
    listKind: IssueList
    plural: issues
    singular: issue
  scope: Namespaced
  versions:
  - name: v1alpha1
    schema:
      openAPIV3Schema:
        description: Issue is the Schema for the issues API
        properties:
          apiVersion:
            description: |-
              APIVersion defines the versioned schema of this representation of an object.
              Servers should convert recognized schemas to the latest internal value, and
              may reject unrecognized values.
              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
            type: string
          kind:
            description: |-
              Kind is a string value representing the REST resource this object represents.
              Servers may infer this from the endpoint the client submits requests to.
              Cannot be updated.
              In CamelCase.
              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
            type: string
          metadata:
            type: object
          spec:
            description: IssueSpec defines the desired state of Issue
            properties:
              mapExperiment:
                additionalProperties:
                  type: string
                description: Foo is an example field of Issue. Edit issue_types.go
                  to remove/update
                type: object
            type: object
          status:
            description: IssueStatus defines the observed state of Issue
            type: object
        type: object
    served: true
    storage: true
    subresources:
      status: {}
